fix(panelbar): panelbar item focus should not have outline

--- a/packages/default/scss/panelbar/_layout.scss
+++ b/packages/default/scss/panelbar/_layout.scss
@@ -95,6 +95,10 @@
             }
         }
 
+        // Panelbar item
+        .k-panelbar-item {            
+            outline-style: none;
+        }
 
         // Panelbar content
         .k-panelbar-content {
