chore(fluent): add series palettes

--- a/packages/fluent/scss/core/color-system/_palettes.scss
+++ b/packages/fluent/scss/core/color-system/_palettes.scss
@@ -112,14 +112,149 @@ $kendo-fluent-palettes: (
         180: #234194,
         190: #1f3c90
     ),
-    series: (
-        a: #0099bc,
-        b: #e74856,
-        c: #ffb900,
-        d: #0078d7,
-        e: #8764b8,
-        f: #00cc6a,
-        g: #00b7c3,
-        h: #ca5010
+    series-a: (
+        10: #bfe6ee,
+        20: #aadde8,
+        30: #95d4e3,
+        40: #80ccde,
+        50: #6bc9de,
+        60: #55c5df,
+        70: #40b3cd,
+        80: #2bb4d4,
+        90: #15a7c8,
+        100: #0099bc,
+        110: #008cac,
+        120: #00809d,
+        130: #00738d,
+        140: #00667d,
+        150: #00596e,
+        160: #004d5e,
+        170: #003f4e,
+        180: #00333f,
+        190: #00262f,
+        200: #001c23,
+        210: #001318,
+        220: #000a0c
+    ),
+    series-b: (
+        10: #f9d1d5,
+        20: #f7c2c7,
+        30: #f5b2b9,
+        40: #f3a4ab,
+        50: #f1949d,
+        60: #ef858e,
+        70: #ed7680,
+        80: #eb6772,
+        90: #e95764,
+        100: #e74856,
+        110: #d4424f,
+        120: #c03c47,
+        130: #ad3641,
+        140: #9a3039,
+        150: #862a32,
+        160: #74242b,
+        170: #601e24,
+        180: #4d181c,
+        190: #3a1216,
+        200: #2c0e10,
+        210: #1d090b,
+        220: #0f0505
+    ),
+    series-c: (
+        10: #ffeebf,
+        20: #ffe7aa,
+        30: #ffe295,
+        40: #ffdc80,
+        50: #ffd66b,
+        60: #ffd055,
+        70: #ffcb40,
+        80: #ffc42b,
+        90: #ffbf15,
+        100: #ffb900,
+        110: #eaaa00,
+        120: #d49a00,
+        130: #bf8b00,
+        140: #aa7b00,
+        150: #956c00,
+        160: #805d00,
+        170: #6b4d00,
+        180: #553d00,
+        190: #402e00,
+        200: #302300,
+        210: #201700,
+        220: #100c00
+    ),
+    series-d: (
+        10: #bfddf5,
+        20: #aadde8,
+        30: #95c6ee,
+        40: #80bceb,
+        50: #6bb0e8,
+        60: #55a5e4,
+        70: #409ae1,
+        80: #2b8fde,
+        90: #1583da,
+        100: #0078d7,
+        110: #006ec5,
+        120: #0064b3,
+        130: #005aa1,
+        140: #00508f,
+        150: #00467d,
+        160: #003c6c,
+        170: #003259,
+        180: #002848,
+        190: #001e36,
+        200: #001623,
+        210: #000f1b,
+        220: #00080e
+    ),
+    series-e: (
+        10: #e1d8ed,
+        20: #d7cbe7,
+        30: #cdbee1,
+        40: #c3b2dc,
+        50: #b9a4d5,
+        60: #af98d0,
+        70: #a58bca,
+        80: #9b7ec4,
+        90: #9171be,
+        100: #8764b8,
+        110: #7c5ca9,
+        120: #705399,
+        130: #654b8a,
+        140: #5a437b,
+        150: #4e3a6b,
+        160: #44325c,
+        170: #382a4d,
+        180: #2d213d,
+        190: #22192e,
+        200: #1a1323,
+        210: #110d17,
+        220: #09060c
+    ),
+    series-f: (
+        10: #bff2da,
+        20: #aaeecd,
+        30: #95e9c1,
+        40: #80e6b5,
+        50: #6be1a8,
+        60: #55dd9b,
+        70: #40d98f,
+        80: #2bd583,
+        90: #15d076,
+        100: #00cc6a,
+        110: #00bb61,
+        120: #00aa58,
+        130: #009950,
+        140: #008846,
+        150: #00773e,
+        160: #006635,
+        170: #00552c,
+        180: #004423,
+        190: #00331b,
+        200: #002614,
+        210: #001a0d,
+        220: #000d07
     )
+
 ) !default;
