--- a/packages/fluent/scss/index.scss
+++ b/packages/fluent/scss/index.scss
@@ -155,7 +155,7 @@
 
 
 // Dataviz
-// @use "dataviz";
+@use "dataviz";
 @use "map";
 @use "orgchart";
 // @use "signature";
@@ -317,7 +317,7 @@
 
 
     // Dataviz
-    // @include dataviz.styles();
+    @include dataviz.styles();
     @include map.styles();
     @include orgchart.styles();
     // @include signature.styles();
