--- a/packages/fluent/scss/action-sheet/_layout.scss
+++ b/packages/fluent/scss/action-sheet/_layout.scss
@@ -3,13 +3,54 @@
 
 @mixin kendo-action-sheet--layout() {
     .k-actionsheet-container {
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
+        max-width: unquote("max(100%, 100vw)");
+        max-height: unquote("max(100%, 100vh)");
         position: fixed;
         top: 0;
         left: 0;
         z-index: 9999;
         overflow: hidden;
+        transform: translateZ(0);
+    }
+
+    // Animation container
+    .k-actionsheet-container {
+
+        // Overlay
+        > .k-overlay {
+            position: absolute;
+            z-index: 1;
+        }
+
+        // Nested animation container
+        > .k-animation-container {
+            width: 100%;
+            height: 100%;
+            border-radius: 0;
+            overflow: hidden;
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            left: 0;
+            pointer-events: none;
+
+            > .k-child-animation-container {
+                position: absolute;
+            }
+        }
+
+        // No animation container
+        > .k-actionsheet {
+            position: absolute;
+            z-index: 2;
+        }
+
+        // Enable mouse events for action sheet
+        .k-actionsheet {
+            pointer-events: all;
+        }
     }
 
     // Actionsheet
@@ -18,6 +59,7 @@
         padding-block: var( --kendo-actionsheet-padding-y, #{$kendo-actionsheet-padding-y} );
         width: var( --kendo-actionsheet-width, #{$kendo-actionsheet-width} );
         max-width: var( --kendo-actionsheet-max-width, #{$kendo-actionsheet-max-width} );
+        height: var( --kendo-actionsheet-height, #{$kendo-actionsheet-height} );
         max-height: var( --kendo-actionsheet-max-height, #{$kendo-actionsheet-max-height} );
         border-width: 0;
         border-style: solid;
@@ -26,10 +68,8 @@
         font-size: var( --kendo-actionsheet-font-size, #{$kendo-actionsheet-font-size} );
         font-family: var( --kendo-actionsheet-font-family, #{$kendo-actionsheet-font-family} );
         line-height: var( --kendo-actionsheet-line-height, #{$kendo-actionsheet-line-height} );
-        overflow-x: hidden;
-        overflow-y: auto;
-        position: fixed;
-        z-index: 10002;
+        overflow: hidden;
+        position: relative;
 
         *,
         *::before,
@@ -39,6 +79,8 @@
     }
 
     .k-actionsheet-fullscreen {
+        width: 100%;
+        max-width: 100%;
         max-height: 100%;
         height: 100%;
     }
@@ -57,6 +99,7 @@
         font-family: var( --kendo-actionsheet-header-font-family, #{$kendo-actionsheet-header-font-family} );
         line-height: var( --kendo-actionsheet-header-line-height, #{$kendo-actionsheet-header-line-height} );
         flex: none;
+        gap: var( --kendo-actionsheet-header-gap, #{$kendo-actionsheet-header-gap} );
     }
 
 
@@ -64,12 +107,24 @@
     .k-actionsheet-titlebar {
         @extend .k-actionsheet-header !optional;
         display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+    }
+
+    .k-actionsheet-titlebar-group {
+        display: flex;
         flex-flow: row nowrap;
         align-items: center;
+        width: 100%;
     }
 
     .k-actionsheet-title {
         flex: 1;
+    }
+
+    .k-actionsheet-subtitle {
+        font-size: var( --kendo-actionsheet-subtitle-font-size, #{$kendo-actionsheet-subtitle-font-size} );
+        line-height: var( --kendo-actionsheet-subtitle-line-height, #{$kendo-actionsheet-subtitle-line-height} );
     }
 
     .k-actionsheet-actions {
@@ -81,6 +136,7 @@
     .k-actionsheet-content {
         flex: 1;
         overflow: auto;
+        position: relative;
     }
 
 
@@ -95,6 +151,7 @@
         margin: 0;
         padding: 0;
         list-style: none;
+        flex: none;
     }
 
 
@@ -102,6 +159,13 @@
     .k-actionsheet-item {
         padding: 0;
         box-sizing: border-box;
+
+        &:focus,
+        &.k-focus {
+            outline-width: var( --kendo-actionsheet-item-focus-outline-width, #{$kendo-actionsheet-item-focus-outline-width} );
+            outline-style: solid;
+            outline-offset: calc( -1 * var( --kendo-actionsheet-item-focus-outline-width, #{$kendo-actionsheet-item-focus-outline-width} ) );
+        }
     }
 
     .k-actionsheet-action {
@@ -115,16 +179,8 @@
         outline: 0;
         display: flex;
         flex-flow: row nowrap;
-        align-items: center;
+        align-items: flex-start;
         gap: var( --kendo-actionsheet-item-spacing, #{$kendo-actionsheet-item-spacing} );
-
-
-        &:focus,
-        &.k-focus {
-            outline-width: var( --kendo-actionsheet-item-focus-outline-width, #{$kendo-actionsheet-item-focus-outline-width} );
-            outline-style: solid;
-            outline-offset: calc( -1 * var( --kendo-actionsheet-item-focus-outline-width, #{$kendo-actionsheet-item-focus-outline-width} ) );
-        }
     }
 
     .k-actionsheet-item-icon {
@@ -150,6 +206,7 @@
     .k-actionsheet > .k-hr {
         margin: 0;
         border-color: inherit;
+        flex: none;
     }
 
 
@@ -210,6 +267,31 @@
         display: flex;
         flex-flow: column nowrap;
 
+        .k-actionsheet-titlebar {
+            padding-inline: var( --kendo-adaptive-actionsheet-header-padding-x, #{$kendo-adaptive-actionsheet-header-padding-x} );
+            padding-block: var( --kendo-adaptive-actionsheet-header-padding-y, #{$kendo-adaptive-actionsheet-header-padding-y} );
+            border-bottom-width: var( --kendo-adaptive-actionsheet-header-border-width, #{$kendo-adaptive-actionsheet-header-border-width} );
+        }
+
+        .k-actionsheet-content {
+            padding-inline: var( --kendo-adaptive-actionsheet-content-padding-x, #{$kendo-adaptive-actionsheet-content-padding-x} );
+            padding-block: var( --kendo-adaptive-actionsheet-content-padding-y, #{$kendo-adaptive-actionsheet-content-padding-y} );
+        }
+
+        .k-actionsheet-footer {
+            padding-inline: var( --kendo-adaptive-actionsheet-footer-padding-x, #{$kendo-adaptive-actionsheet-footer-padding-x} );
+            padding-block: var( --kendo-adaptive-actionsheet-footer-padding-y, #{$kendo-adaptive-actionsheet-footer-padding-y} );
+        }
+
+        .k-list-container,
+        .k-treeview {
+            height: 100%;
+        }
+        .k-list-filter {
+            width: 100%;
+            padding-inline: 0;
+        }
+
         .k-calendar {
             margin-inline: auto;
             border-width: 0;
@@ -229,5 +311,58 @@
                 height: 100%;
             }
         }
+
+        .k-datetime-wrap {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-flow: column nowrap;
+        }
+        .k-datetime-selector {
+            flex: 1 1 auto;
+        }
+
+        .k-datetime-calendar-wrap {
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            flex: 0 0 100%;
+        }
+
+        .k-datetime-time-wrap {
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 100%;
+            bottom: 0;
+            flex: 0 0 100%;
+        }
+
+        .k-scrollable-wrap {
+            height: 100%;
+            overflow-y: auto;
+        }
     }
+}
+
+@mixin kendo-action-sheet--layout-jq() {
+
+    .k-actionsheet-jq {
+        &.k-actionsheet {
+            height: auto;
+            position: relative;
+        }
+
+        .k-actionsheet-header {
+            @extend .k-actionsheet-titlebar !optional;
+            align-items: flex-start;
+        }
+
+        .k-actionsheet-action {
+            align-items: center;
+        }
+    }
+
 }
